# src/api/storage-equipment/models/OrderCreate.ts
@@ -1,0 +1,98 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hospital Equipment Management API
+ * Storage Equipment management for hospital
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: xskrabakf@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { OrderItem } from './OrderItem';
+import {
+    OrderItemFromJSON,
+    OrderItemFromJSONTyped,
+    OrderItemToJSON,
+} from './OrderItem';
+
+/**
+ * 
+ * @export
+ * @interface OrderCreate
+ */
+export interface OrderCreate {
+    /**
+     * List of equipment items to be ordered
+     * @type {Array<OrderItem>}
+     * @memberof OrderCreate
+     */
+    items: Array<OrderItem>;
+    /**
+     * Name or ID of the staff member creating the order
+     * @type {string}
+     * @memberof OrderCreate
+     */
+    requestedBy: string;
+    /**
+     * Department ordering the equipment
+     * @type {string}
+     * @memberof OrderCreate
+     */
+    requestorDepartment?: string;
+    /**
+     * Additional notes about the order request
+     * @type {string}
+     * @memberof OrderCreate
+     */
+    notes?: string;
+}
+
+/**
+ * Check if a given object implements the OrderCreate interface.
+ */
+export function instanceOfOrderCreate(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "items" in value;
+    isInstance = isInstance && "requestedBy" in value;
+
+    return isInstance;
+}
+
+export function OrderCreateFromJSON(json: any): OrderCreate {
+    return OrderCreateFromJSONTyped(json, false);
+}
+
+export function OrderCreateFromJSONTyped(json: any, ignoreDiscriminator: boolean): OrderCreate {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'items': ((json['items'] as Array<any>).map(OrderItemFromJSON)),
+        'requestedBy': json['requestedBy'],
+        'requestorDepartment': !exists(json, 'requestorDepartment') ? undefined : json['requestorDepartment'],
+        'notes': !exists(json, 'notes') ? undefined : json['notes'],
+    };
+}
+
+export function OrderCreateToJSON(value?: OrderCreate | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'items': ((value.items as Array<any>).map(OrderItemToJSON)),
+        'requestedBy': value.requestedBy,
+        'requestorDepartment': value.requestorDepartment,
+        'notes': value.notes,
+    };
+}
+
