# src/api/storage-equipment/models/OrderUpdate.ts
@@ -1,0 +1,77 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hospital Equipment Management API
+ * Storage Equipment management for hospital
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: xskrabakf@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface OrderUpdate
+ */
+export interface OrderUpdate {
+    /**
+     * New status for the order
+     * @type {string}
+     * @memberof OrderUpdate
+     */
+    status: OrderUpdateStatusEnum;
+}
+
+
+/**
+ * @export
+ */
+export const OrderUpdateStatusEnum = {
+    Delivered: 'delivered',
+    Cancelled: 'cancelled'
+} as const;
+export type OrderUpdateStatusEnum = typeof OrderUpdateStatusEnum[keyof typeof OrderUpdateStatusEnum];
+
+
+/**
+ * Check if a given object implements the OrderUpdate interface.
+ */
+export function instanceOfOrderUpdate(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "status" in value;
+
+    return isInstance;
+}
+
+export function OrderUpdateFromJSON(json: any): OrderUpdate {
+    return OrderUpdateFromJSONTyped(json, false);
+}
+
+export function OrderUpdateFromJSONTyped(json: any, ignoreDiscriminator: boolean): OrderUpdate {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'status': json['status'],
+    };
+}
+
+export function OrderUpdateToJSON(value?: OrderUpdate | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'status': value.status,
+    };
+}
+
